# api-example-udem-2026-01

./: .gitignore  main.py  pyproject.toml
conf/: parameters.py
notebooks/: simple_regression.ipynb
src/: input_data.py  load_model.py
