[project]
name = "api-example-udem-2026-01"
version = "0.1.0"
description = "Project for Specialization University of Medellin"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.46.0",
]
